--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.57</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven.archetype</groupId>
             <artifactId>archetype-common</artifactId>
             <version>3.1.1</version>
