--- a/pom.xml
+++ b/pom.xml
@@ -48,19 +48,33 @@
                 </configuration>
             </plugin>
             <plugin>
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-jar-plugin</artifactId>-->
+<!--                <version>3.1.2</version>-->
+<!--                <configuration>-->
+<!--                    <archive>-->
+<!--                        <mainfest>-->
+<!--                            <addClasspath>true</addClasspath>-->
+<!--                            <mainClass>dragon.client.main</mainClass>-->
+<!--                        </mainfest>-->
+<!--                    </archive>-->
+<!--                </configuration>-->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.2</version>
                 <configuration>
                     <archive>
-                        <mainfest>
+                        <manifest>
                             <addClasspath>true</addClasspath>
                             <mainClass>dragon.client.main</mainClass>
-                        </mainfest>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
